[package]
name = "actix-demo"
version = "0.1.0"
authors = ["Himanshu Gupta<himanshu.mps@gmail.com>"]
edition = "2018"

[dependencies]
couchbase = "1.0.0-alpha.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "3"
actix-service = "1.0.0"
json = "0.12"
env_logger = "0.7"
java-properties = "1.2.0"

[dev-dependencies]
actix-rt = "1"