[package]
name = "actix_demo"
version = "0.1.0"
authors = ["Himanshu Gupta<himanshu.mps@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-http = "2"
couchbase = "1.0.0-alpha.4"
env_logger = "0.8.3"
num_cpus = "1.13.0"
async-std = "1.9.0"
futures = "0.3.15"
tokio = { version = "1.6.1", features = ["full"] }

[dev-dependencies]
actix-rt = "1"

[profile.dev]
opt-level = 0

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
